<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="414dp"
        android:layout_height="49dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:text="@string/app_name"
        android:textColor="@color/colorOnPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="140dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/granasador_logo" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_precio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/tv_calidad"
        android:layout_width="214dp"
        android:layout_height="22dp"
        android:text="@string/tv_calidad"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_precio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_precio"
        app:layout_constraintTop_toBottomOf="@+id/et_precio"
        app:layout_constraintVertical_bias="0.059" />

    <RadioGroup
        android:layout_width="161dp"
        android:layout_height="141dp"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="401dp">

        <RadioButton
            android:id="@+id/rb_genial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_genial" />

        <RadioButton
            android:id="@+id/rb_bien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_bien" />

        <RadioButton
            android:id="@+id/rb_correcto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_correcto" />
    </RadioGroup>

    <Switch
        android:id="@+id/sw_decimales"
        android:layout_width="394dp"
        android:layout_height="44dp"
        android:text="@string/sw_decimales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

</androidx.constraintlayout.widget.ConstraintLayout>